vo formular.html zmeneny  form method z post na get, v SimpleServlet pridana HttpSession a vypis ulozeneho mena v session

--- a/src/main/webapp/formular.html
+++ b/src/main/webapp/formular.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <h1>Post request</h1>
-<form method="post" action="simpleservlet?priezvisko=cernak">
+<form method="get" action="simpleservlet?priezvisko=cernak">
   <input type="text" name="meno">
   <input type="hidden" name="stranka" value="formular.html"/>
   <input type="submit" name="Odosli"/>
