pridany novy radio button pre pohlavia, pridany a odskusany filter

--- a/src/main/webapp/formular.html
+++ b/src/main/webapp/formular.html
@@ -10,6 +10,7 @@
   Pohlavie:
     Zena:<input name="pohlavie" type="radio" value="zena"/>
     Muz:<input type="radio" name="pohlavie" value="muz"/>
+    Neviem:<input type="radio" name="pohlavie" value="nevjem us"/>
 
   Stat:
     <select name="stat" multiple="multiple" size="3">
