vo formular html som pridal "Meno:" pred text box, vo FirstFilter som namiesto filter chain pouzil request dispatchera a pridal ukazku sendRedirect metody.. no a index.jsp hovori sam za seba

--- a/src/main/webapp/formular.html
+++ b/src/main/webapp/formular.html
@@ -3,7 +3,8 @@
 <body>
   <h1>Post request</h1>
 <form method="get" action="simpleservlet?priezvisko=cernak">
-  <input type="text" name="meno">
+
+  Meno:<input type="text" name="meno">
   <input type="hidden" name="stranka" value="formular.html"/>
   <input type="submit" name="Odosli"/>
 
